add h2 profiles, update code

--- a/myfirstproject/first-project/pom.xml
+++ b/myfirstproject/first-project/pom.xml
@@ -97,6 +97,12 @@
             <artifactId>querydsl-jpa</artifactId>
         </dependency>
 
+        <!-- h2 database -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
+        </dependency>
 	</dependencies>
 
 	<build>
