--- a/first-project-2/src/main/resources/application.properties
+++ b/first-project-2/src/main/resources/application.properties
@@ -1,13 +1,17 @@
-#spring.datasource.url=jdbc:h2:mem:test1
-#spring.datasource.username=sa
-#spring.datasource.password=1234567
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-#spring.jpa.hibernate.ddl-auto=update
-#spring.h2.console.enabled=true
-
-spring.datasource.url=jdbc:mariadb://localhost:3307/demo3
-spring.datasource.username=root
-spring.datasource.password=2909
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:h2:mem:test1;DB_CLOSE_DELAY=-1;MODE=MySQL;NON_KEYWORDS=USER
+spring.datasource.username=sa
+spring.datasource.password=1234567
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
+spring.h2.console.enabled=true
+
+# NOTE should yse other profiles for each database configuration
+
+#spring.datasource.url=jdbc:mariadb://localhost:3307/demo3
+#spring.datasource.username=root
+#spring.datasource.password=2909
+#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+#spring.jpa.hibernate.ddl-auto=update
+
+server.error.include-stacktrace=never
