h2 error expected identifier

--- a/first-project-2/src/main/resources/application.properties
+++ b/first-project-2/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+
+# 'user' is a special keyword for almost relationship database
+# https://blog.dkwr.de/development/fix-h2-error-expected-identifeir/
 spring.datasource.url=jdbc:h2:mem:test1;DB_CLOSE_DELAY=-1;MODE=MySQL;NON_KEYWORDS=USER
 spring.datasource.username=sa
 spring.datasource.password=1234567
