--- a/demo-chauluc/demo-chauluc/src/main/resources/application.properties
+++ b/demo-chauluc/demo-chauluc/src/main/resources/application.properties
@@ -4,9 +4,22 @@ spring.datasource.username=root
 spring.datasource.password=123456
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/demo_chauluc
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.username=root
+#spring.datasource.password=Duc29092001#
+
+
+#ORM s/w specific properties
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 #spring.datasource.url=jdbc:mariadb://localhost:3307/demo
 #spring.datasource.username=root
 #spring.datasource.password=2909
 #spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 #spring.jpa.hibernate.ddl-auto=update
 
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
+spring.main.allow-circular-references=true
