--- a/demo-chauluc/demo-chauluc/src/main/resources/application.properties
+++ b/demo-chauluc/demo-chauluc/src/main/resources/application.properties
@@ -4,6 +4,8 @@ spring.datasource.username=root
 spring.datasource.password=123456
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
+spring.liquibase.change-log=classpath:/db/changelog/db.changelog.xml
+
 
 #spring.datasource.url=jdbc:mysql://localhost:3306/demo_chauluc
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
