--- a/demo-chauluc/demo-chauluc/pom.xml
+++ b/demo-chauluc/demo-chauluc/pom.xml
@@ -37,6 +37,12 @@
     <dependencies>
         
         <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+        </dependency>
+
+
+        <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt</artifactId>
             <version>0.9.1</version>
